# node_based_image_manipulation_interface

./: .gitignore  CMakeLists.txt  README.md  changes.txt  important_exmplanations.md  main.cpp  report.md
